# pkg/server/runners/register.go
@@ -1,0 +1,61 @@
+// Copyright 2024 Daytona Platforms Inc.
+// SPDX-License-Identifier: Apache-2.0
+
+package runners
+
+import (
+	"context"
+
+	"github.com/daytonaio/daytona/pkg/models"
+	"github.com/daytonaio/daytona/pkg/services"
+	"github.com/daytonaio/daytona/pkg/stores"
+)
+
+func (s *RunnerService) RegisterRunner(ctx context.Context, req services.RegisterRunnerDTO) (*services.RunnerDTO, error) {
+	var err error
+	ctx, err = s.runnerStore.BeginTransaction(ctx)
+	if err != nil {
+		return nil, s.runnerStore.RollbackTransaction(ctx, err)
+	}
+
+	defer stores.RecoverAndRollback(ctx, s.runnerStore)
+
+	_, err = s.runnerStore.Find(ctx, req.Alias)
+	if err == nil {
+		return nil, s.runnerStore.RollbackTransaction(ctx, services.ErrRunnerAlreadyExists)
+	}
+
+	apiKey, err := s.generateApiKey(ctx, req.Id)
+	if err != nil {
+		return nil, s.runnerStore.RollbackTransaction(ctx, err)
+	}
+
+	runner := &models.Runner{
+		Id:     req.Id,
+		Alias:  req.Alias,
+		ApiKey: apiKey,
+	}
+
+	err = s.runnerStore.Save(ctx, runner)
+	if err != nil {
+		return nil, s.runnerStore.RollbackTransaction(ctx, err)
+	}
+
+	err = s.runnerMetadataStore.Save(ctx, &models.RunnerMetadata{
+		RunnerId: runner.Id,
+		Uptime:   0,
+	})
+	if err != nil {
+		return nil, s.runnerStore.RollbackTransaction(ctx, err)
+	}
+
+	err = s.runnerStore.CommitTransaction(ctx)
+	if err != nil {
+		return nil, s.runnerStore.RollbackTransaction(ctx, err)
+	}
+
+	return &services.RunnerDTO{
+		Runner: *runner,
+		State:  runner.GetState(),
+	}, nil
+}
